@@ -1,3 +1,10 @@
+2016-07-13  Andre Vehreschild  <vehre@gcc.gnu.org>
+
+	Backport from trunk:
+	PR fortran/71623
+	* gfortran.dg/deferred_character_18.f90: New test.
+
+
 2016-07-12  Segher Boessenkool  <segher@kernel.crashing.org>
 
 	Backport from mainline
