@@ -1,3 +1,10 @@
+2016-07-13  Andre Vehreschild  <vehre@gcc.gnu.org>
+
+	Backport from trunk:
+	PR fortran/71623
+	* trans-stmt.c (gfc_trans_allocate): Add code of pre block of typespec
+	in allocate to parent block.
+
 2016-07-11  Thomas Koenig  <tkoenig@gcc.gnu.org>
 
 	Backport from trunk:
